Fixed exp not displaying on mobile, and nav on mobile

--- a/themes/LiturgyLaboratory/css/style.css
+++ b/themes/LiturgyLaboratory/css/style.css
@@ -354,6 +354,9 @@ body{
 
 #mobNav li {
   list-style-type: none;
+  font-size: var(--step-1);
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 #mobNavIcon{
